# sparv-sbx-word-prediction-kb-bert

./: .bumpversion.toml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cliff.toml  pyproject.toml  ruff.toml
.github/workflows/: check.yml  release-kb-bert.yml  release.yml  rolling.yml  scheduled.yml  test.yml
src/sbx_word_prediction_kb_bert/: __init__.py  annotations.py  constants.py  metadata.yaml  predictor.py
tests/: conftest.py  test_annotations.py  test_predictor.py
tests/__snapshots__/: test_annotations.ambr
word-prediction-kb-bert/src/sbx_word_prediction_kb_bert/: metadata.yaml
